# javac-error-explorer

./: .gitignore  README.md  app.py  constants.py  data_layer.py  javac_compiler_properties_parser.py  parse-compile-properties.py  pyproject.toml  test_javac_compiler_properties_parser.py
static/: rate.js  styles.css
templates/: base.html  index.html  message-detail.html  message-not-found.html
