[tool.poetry]
name = "javac-error-explorer"
version = "0.1.0"
description = "Parses Javac errors"
authors = ["Eddie Antonio Santos <eddie.santos@ucdconnect.ie>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
