[tool.poetry]
name = "javac-error-explorer"
version = "0.1.0"
description = "Explore Javac error messages (and more)"
authors = ["Eddie Antonio Santos <eddie.santos@ucdconnect.ie>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"
pyright = "^1.1.271"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
